<?xml version="1.0" encoding="utf-8"?><LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dp40"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/configuration"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/sp20" />

        <ImageButton
            android:id="@+id/btn_apply"
            android:layout_width="@dimen/dp40"
            android:layout_height="@dimen/dp40"
            android:layout_gravity="end|center"
            android:layout_marginTop="@dimen/dp10"
            android:layout_marginEnd="@dimen/dp15"
            android:layout_marginRight="@dimen/dp15"
            android:layout_marginBottom="@dimen/dp10"
            android:background="@drawable/ic_done"
            tools:ignore="ContentDescription" />

    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp5"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="@dimen/dp10"
            android:text="@string/tag_show_animation"
            android:textColor="#716e69"
            android:textSize="@dimen/sp18" />

        <Spinner
            android:id="@+id/spinner_tag_show_animation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp5"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="@dimen/dp10"
            android:text="@string/tag_hide_animation"
            android:textColor="#716e69"
            android:textSize="@dimen/sp18" />

        <Spinner
            android:id="@+id/spinner_tag_hide_animation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp10"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_carrot_top_color"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp5"
            android:layout_weight="1"
            android:background="@color/colorPrimaryDark"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:padding="@dimen/dp5"
            android:text="@string/carrot_top_color"
            android:textColor="@android:color/white"
            android:textSize="@dimen/sp16" />

        <TextView
            android:id="@+id/tv_tag_background_color"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp5"
            android:layout_weight="1"
            android:background="@color/colorPrimaryDark"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:padding="@dimen/dp5"
            android:text="@string/tag_background_color"
            android:textColor="@android:color/white"
            android:textSize="@dimen/sp16" />

        <TextView
            android:id="@+id/tv_tag_text_color"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp5"
            android:layout_weight="1"
            android:background="@android:color/white"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:padding="@dimen/dp5"
            android:text="@string/tag_text_color"
            android:textColor="@android:color/black"
            android:textSize="@dimen/sp16" />

    </LinearLayout>

    <TextView
        android:id="@+id/tv_like_color"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp15"
        android:background="@android:color/white"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:padding="@dimen/dp5"
        android:text="@string/like_color"
        android:textColor="@android:color/black"
        android:textSize="@dimen/sp20" />

</LinearLayout>