<?xml version="1.0" encoding="utf-8"?><LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/header_tag_photo"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#DFDFE1"
        android:orientation="horizontal">

        <com.robert.phototag.SquareImageView
            android:id="@+id/get_back"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="20"
            android:padding="5dp"
            android:src="@drawable/ic_go_back" />

        <TextView
            android:id="@+id/tag_photo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:gravity="center"
            android:text="@string/tag_photo"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/sp22" />

        <com.robert.phototag.SquareImageView
            android:id="@+id/done"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="20"
            android:padding="5dp"
            android:src="@drawable/ic_done" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/header_search_someone"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#DFDFE1"
        android:orientation="horizontal"
        android:visibility="gone">

        <EditText
            android:id="@+id/search_for_a_person"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:gravity="start|center_vertical"
            android:hint="@string/search_for_user"
            android:inputType="text"
            android:padding="10dp"
            android:textColor="@android:color/black"
            android:textSize="@dimen/sp18" />

        <TextView
            android:id="@+id/cancel"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:background="@null"
            android:gravity="center"
            android:text="@string/cancel"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/sp18" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <com.robert.phototag.PhotoTag
            android:id="@+id/photo_tag"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:canWeAddTags="true"
            app:overrideDefaultColor="@color/colorPhotoTag"
            app:instaTextColor="@android:color/white" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/tag_indicator"
            android:layout_width="@dimen/dp50"
            android:layout_height="@dimen/dp50"
            android:layout_alignParentStart="true"
            android:layout_alignBottom="@id/photo_tag"
            android:layout_margin="@dimen/dp10"
            android:background="@drawable/ic_tag_badge"
            android:scaleType="fitXY"
            android:visibility="gone"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tap_photo_to_tag_someone"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/photo_tag"
            android:layout_gravity="bottom"
            android:background="#DFDFE1"
            android:gravity="center"
            android:text="@string/tap_here_to_choose_a_photo"
            android:textColor="@android:color/black"
            android:textSize="@dimen/sp18"
            android:textStyle="normal" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_some_one_to_be_tagged"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#EEFFFFFF"
            android:visibility="gone" />

    </RelativeLayout>

</LinearLayout>
